fix: changed tardis_eda file with good markdowns

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -109,6 +109,7 @@
     "        df[\"Departure station\"].astype(str).str.upper().str.strip()\n",
     "    )\n",
     "    df[\"Average journey time\"] = pd.to_numeric(\n",
+    "\n",
     "        df[\"Average journey time\"], errors=\"coerce\"\n",
     "    )\n",
     "\n",
@@ -210,6 +211,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0796515d",
+   "metadata": {},
+   "source": [
+    "Read the csv given in path:\n",
+    "- With the ; separator\n",
+    "- Encoding in utf-8 to get good values\n",
+    "- Disabled quoting so the quotes are automatically removed\n",
+    "- Espacechar is \\\n",
+    "- Skip on bad lines to avoid errors\n",
+    "- Runs for python for better treatment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "114ef454",
@@ -230,6 +245,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8325bd65",
+   "metadata": {},
+   "source": [
+    "Write a dataframe to csv with the defaut path as test.csv, can be changed though.\n",
+    "Added separator and disabled index to be exactly like the old csv file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4fb08f13",
@@ -238,6 +262,18 @@
    "source": [
     "def to_csv(df: pd.DataFrame, path=\"test.csv\"):\n",
     "    df.to_csv(path, sep=\";\", index=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c37ebcde",
+   "metadata": {},
+   "source": [
+    "This algorithm to get the closest match works for a list and a name:\n",
+    "\n",
+    "- Compare the name with all elements in the correct list\n",
+    "- returns the best match with a distance <=1\n",
+    "- return None if no good matches found"
    ]
   },
   {
@@ -268,6 +304,17 @@
     "        return correct_list[best_match_index]\n",
     "    else:\n",
     "        return \"None\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ff0fdca",
+   "metadata": {},
+   "source": [
+    "This function clean data in three steps:\n",
+    "- If the column is a comment or departure/arrival station it'll be cleaned by the function get_closest_match to return the correct name of the station, None for comments\n",
+    "- If it is the date and miswritten, it'll take the line on top\n",
+    "- If it is none of the above, it is certainly a numeric column so if Null value it is replaced by 0"
    ]
   },
   {
