fix: changed path of dictionary visualizer in the bonus

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -23,7 +23,7 @@
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "import sys\n",
-    "from dictionary_visualizer import visualiser_dictionnaire\n",
+    "from bonus.dictionary_visualizer import visualiser_dictionnaire\n",
     "\n",
     "clean_names = [\n",
     "    \"BORDEAUX ST JEAN\",\n",
