fix:  format tardis_eda

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bdc41ca8",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,6 @@
     "        df[\"Departure station\"].astype(str).str.upper().str.strip()\n",
     "    )\n",
     "    df[\"Average journey time\"] = pd.to_numeric(\n",
-    "\n",
     "        df[\"Average journey time\"], errors=\"coerce\"\n",
     "    )\n",
     "\n",
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e75dcb84",
    "metadata": {},
    "outputs": [],
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5a0d2f87",
    "metadata": {},
    "outputs": [],
@@ -226,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "114ef454",
    "metadata": {},
    "outputs": [],
@@ -255,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4fb08f13",
    "metadata": {},
    "outputs": [],
@@ -278,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "53975e0e",
    "metadata": {},
    "outputs": [],
@@ -319,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "625d633b",
    "metadata": {},
    "outputs": [],
@@ -342,33 +341,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
+    "    # Lecture du fichier csv\n",
     "    df = read_csv(\"dataset.csv\")\n",
-    "    print(\"Fichier lu.\")\n",
     "\n",
+    "    # Nettoyage du tableau\n",
     "    clean_data(df)\n",
-    "    print(\"Données nettoyées.\")\n",
     "\n",
+    "    # Convertir en csv\n",
     "    to_csv(df, path=\"cleaned_dataset.csv\")\n",
-    "    print(\"Données sauvegardées dans test.csv.\")\n",
     "\n",
+    "    # Récupération des données\n",
     "    data_values_dic = get_data_station(df)\n",
-    "    data_values_tab = get_data_tab(df)\n",
-    "    # show_data(df)\n",
-    "\n",
-    "    for elt in data_values_tab:\n",
-    "        for i in range(0, len(data_values_tab[elt])):\n",
-    "            print(f\"City: {elt}\", end=\"\")\n",
-    "            print(\n",
-    "                f\"{data_values_tab[elt]['Arrival stations'][i]} - {data_values_tab[elt]['Dates'][i]}\"\n",
-    "            )\n",
-    "\n",
-    "\n",
+    "    data_values_tab = get_data_tab(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23d480b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
@@ -381,7 +380,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
