--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,13 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import csv\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "import sys\n",
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "bdc41ca8",
    "metadata": {},
    "outputs": [],
@@ -109,6 +108,7 @@
     "        df[\"Departure station\"].astype(str).str.upper().str.strip()\n",
     "    )\n",
     "    df[\"Average journey time\"] = pd.to_numeric(\n",
+    "\n",
     "        df[\"Average journey time\"], errors=\"coerce\"\n",
     "    )\n",
     "\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "e75dcb84",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "5a0d2f87",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "114ef454",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "4fb08f13",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "53975e0e",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "625d633b",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "id": "2d5c01ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data_program(df: pd.DataFrame):\n",
+    "    data_values_dic = get_data_station(df)\n",
+    "    data_values_tab = get_data_tab(df)\n",
+    "    return data_values_dic, data_values_tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
@@ -357,16 +370,43 @@
     "    to_csv(df, path=\"cleaned_dataset.csv\")\n",
     "\n",
     "    # Récupération des données\n",
-    "    data_values_dic = get_data_station(df)\n",
-    "    data_values_tab = get_data_tab(df)"
+    "    data_values_dic, data_values_tab = get_data_program(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "23d480b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5080/1245369182.py:12: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df[column] = df[column].fillna(method=\"ffill\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Departure station\n",
+      "Arrival station\n",
+      "Cancellation comments\n",
+      "Departure delay comments\n",
+      "Arrival delay comments\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5080/2567437744.py:10: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  temp_dic[df_grouped.columns[i]] = tab[i]\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
