--- a/tardis_model.ipynb
+++ b/tardis_model.ipynb
@@ -45,12 +45,12 @@
    "outputs": [],
    "source": [
     "def show_pred(X_test, y_test, y_pred):\n",
-    "    plt.scatter(X_test, y_test, color='blue', label='Vraies valeurs')\n",
-    "    plt.plot(X_test, y_pred, color='red', label='Prédictions')\n",
-    "    plt.xlabel('schTrains')\n",
-    "    plt.ylabel('CanTrains')\n",
+    "    plt.scatter(X_test, y_test, color=\"blue\", label=\"Vraies valeurs\")\n",
+    "    plt.plot(X_test, y_pred, color=\"red\", label=\"Prédictions\")\n",
+    "    plt.xlabel(\"schTrains\")\n",
+    "    plt.ylabel(\"CanTrains\")\n",
     "    plt.legend()\n",
-    "    plt.show() "
+    "    plt.show()"
    ]
   },
   {
@@ -71,13 +71,15 @@
     "def training_model():\n",
     "    data_dic, data_tab = get_data_program()\n",
     "    useful_data_paris = {\n",
-    "        'schTrains': data_tab['PARIS EST']['Number of scheduled trains'],\n",
-    "        'CanTrains': data_tab['PARIS EST']['Number of cancelled trains']\n",
+    "        \"schTrains\": data_tab[\"PARIS EST\"][\"Number of scheduled trains\"],\n",
+    "        \"CanTrains\": data_tab[\"PARIS EST\"][\"Number of cancelled trains\"],\n",
     "    }\n",
     "    df = pd.DataFrame(useful_data_paris)\n",
-    "    x = df[['schTrains']]\n",
-    "    y = df[['CanTrains']]\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
+    "    x = df[[\"schTrains\"]]\n",
+    "    y = df[[\"CanTrains\"]]\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        x, y, test_size=0.2, random_state=42\n",
+    "    )\n",
     "    # Données lu et séparées\n",
     "    model = KNeighborsClassifier()\n",
     "    model.fit(X_train, y_train)\n",
@@ -100,6 +102,7 @@
    "source": [
     "def main():\n",
     "    training_model()\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
