--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -21,8 +21,7 @@
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
-    "import sys\n",
-    "from bonus.dictionary_visualizer import visualiser_dictionnaire\n",
+    "import csv\n",
     "\n",
     "clean_names = [\n",
     "    \"BORDEAUX ST JEAN\",\n",
