fix: changed data parsing

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "bdc41ca8",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "e75dcb84",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "5a0d2f87",
    "metadata": {},
    "outputs": [],
@@ -223,22 +223,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "114ef454",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_csv(csv_path):\n",
-    "    df = pd.read_csv(\n",
-    "        csv_path,\n",
-    "        sep=\";\",\n",
-    "        encoding=\"utf-8\",\n",
-    "        quoting=csv.QUOTE_NONE,\n",
-    "        escapechar=\"\\\\\",\n",
-    "        on_bad_lines=\"skip\",\n",
-    "        engine=\"python\",\n",
-    "    )\n",
-    "    return df"
+    "def read_csv(filename):\n",
+    "    final_dic = {}\n",
+    "    lignes_corrigees = []\n",
+    "\n",
+    "    with open(filename, mode=\"r\", encoding='utf-8', newline='') as f:\n",
+    "        reader = csv.reader(f, delimiter=';', quotechar='\"')\n",
+    "        header = next(reader)\n",
+    "        nb_columns = len(header)\n",
+    "\n",
+    "        for col in header:\n",
+    "            final_dic[col] = []\n",
+    "\n",
+    "        buffer = \"\"\n",
+    "        for line in f:\n",
+    "            buffer += line\n",
+    "            if buffer.count(\";\") >= nb_columns - 1:\n",
+    "                try:\n",
+    "                    row = next(csv.reader([buffer], delimiter=\";\", quotechar='\"'))\n",
+    "                    row = [val.replace('\\n', ' | ').strip() for val in row]\n",
+    "                    if len(row) == nb_columns:\n",
+    "                        lignes_corrigees.append(row)\n",
+    "                except csv.Error:\n",
+    "                    buffer = \"\"\n",
+    "                buffer = \"\"\n",
+    "\n",
+    "        for row in lignes_corrigees:\n",
+    "            for i, val in enumerate(row):\n",
+    "                final_dic[header[i]].append(val)\n",
+    "    return pd.DataFrame(final_dic)"
    ]
   },
   {
@@ -252,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "4fb08f13",
    "metadata": {},
    "outputs": [],
@@ -275,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "53975e0e",
    "metadata": {},
    "outputs": [],
@@ -316,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "625d633b",
    "metadata": {},
    "outputs": [],
@@ -339,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "2d5c01ec",
    "metadata": {},
    "outputs": [],
@@ -352,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
@@ -373,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "23d480b2",
    "metadata": {},
    "outputs": [
@@ -381,7 +399,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5080/1245369182.py:12: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/tmp/ipykernel_5535/1245369182.py:12: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df[column] = df[column].fillna(method=\"ffill\")\n"
      ]
     },
@@ -394,14 +412,6 @@
       "Cancellation comments\n",
       "Departure delay comments\n",
       "Arrival delay comments\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_5080/2567437744.py:10: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  temp_dic[df_grouped.columns[i]] = tab[i]\n"
      ]
     }
    ],
