feat: date is well corrected and replaced by the value on top of the row

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,7 @@
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "import csv\n",
+    "import re\n",
     "\n",
     "clean_names = [\n",
     "    \"BORDEAUX ST JEAN\",\n",
@@ -281,6 +282,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee4f7d2c",
+   "metadata": {},
+   "source": [
+    "Is valid date check if the date is on format YYYY-MM (REGEX BLBLBLBLBL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "451b3e69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_valid_date(date_str):\n",
+    "        return bool(re.match(r'^\\d{4}-\\d{2}$', str(date_str).strip()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c37ebcde",
    "metadata": {},
    "source": [
@@ -334,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "625d633b",
    "metadata": {},
    "outputs": [],
@@ -343,16 +363,19 @@
     "    for column in df.columns:\n",
     "        if column in [\"Departure station\", \"Arrival station\"] or \"comments\" in column:\n",
     "            print(column)\n",
-    "            if column in df.columns:\n",
-    "                df[column] = (\n",
-    "                    df[column]\n",
-    "                    .fillna(\"\")\n",
-    "                    .apply(lambda x: get_closest_match(str(x), clean_names))\n",
-    "                )\n",
+    "            df[column] = (\n",
+    "                df[column]\n",
+    "                .fillna(\"\")\n",
+    "                .apply(lambda x: get_closest_match(str(x), clean_names))\n",
+    "            )\n",
     "        elif column == \"Date\":\n",
+    "            df[column] = df[column].apply(lambda x: x if is_valid_date(x) else pd.NA)\n",
     "            df[column] = df[column].fillna(method=\"ffill\")\n",
+    "        elif column == \"Service\":\n",
+    "            df[column] = df[column].fillna(\"International\")\n",
     "        else:\n",
-    "            df[column] = df[column].fillna(0)"
+    "            df[column] = df[column].fillna(0)\n",
+    "    return df"
    ]
   },
   {
@@ -370,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
@@ -391,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "23d480b2",
    "metadata": {},
    "outputs": [
