feat: drop stations pair duplicates

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "bdc41ca8",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "e75dcb84",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "5a0d2f87",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "114ef454",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "4fb08f13",
    "metadata": {},
    "outputs": [],
@@ -290,13 +290,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "451b3e69",
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_valid_date(date_str):\n",
-    "        return bool(re.match(r'^\\d{4}-\\d{2}$', str(date_str).strip()))"
+    "    if not isinstance(date_str, str):\n",
+    "        return False\n",
+    "    if len(date_str) != 7:\n",
+    "        return False\n",
+    "    if date_str[4] != '-':\n",
+    "        return False\n",
+    "    try:\n",
+    "        year = int(date_str[0:4])\n",
+    "        month = int(date_str[5:7])\n",
+    "        return 1 <= month <= 12\n",
+    "    except ValueError:\n",
+    "        return False\n"
    ]
   },
   {
@@ -313,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "53975e0e",
    "metadata": {},
    "outputs": [],
@@ -354,33 +365,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "625d633b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_data(df: pd.DataFrame):\n",
+    "    # Normalisation globale des valeurs manquantes\n",
+    "    df = df.replace([\"N/A\", \"NA\", \"\", \" \"], pd.NA)\n",
+    "\n",
     "    for column in df.columns:\n",
+    "        # Pour les colonnes texte avec noms ou commentaires\n",
     "        if column in [\"Departure station\", \"Arrival station\"] or \"comments\" in column:\n",
-    "            print(column)\n",
     "            df[column] = (\n",
     "                df[column]\n",
     "                .fillna(\"\")\n",
     "                .apply(lambda x: get_closest_match(str(x), clean_names))\n",
     "            )\n",
+    "\n",
+    "        # Correction de la colonne Date\n",
     "        elif column == \"Date\":\n",
     "            df[column] = df[column].apply(lambda x: x if is_valid_date(x) else pd.NA)\n",
-    "            df[column] = df[column].fillna(method=\"ffill\")\n",
+    "            # Forward-fill les dates manquantes\n",
+    "            df[column] = df[column].fillna(method='ffill')\n",
+    "\n",
+    "\n",
+    "        # Correction de la colonne Service\n",
     "        elif column == \"Service\":\n",
     "            df[column] = df[column].fillna(\"International\")\n",
+    "\n",
     "        else:\n",
+    "        # Pour le reste (colonnes numériques)\n",
     "            df[column] = df[column].fillna(0)\n",
+    "\n",
+    "    # Supprime les paires de stations en double\n",
+    "    df = df.drop_duplicates(subset=[\"Departure station\", \"Arrival station\"], keep=\"first\")\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "2d5c01ec",
    "metadata": {},
    "outputs": [],
@@ -393,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
@@ -414,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "23d480b2",
    "metadata": {},
    "outputs": [
@@ -422,19 +447,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5535/1245369182.py:12: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df[column] = df[column].fillna(method=\"ffill\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Departure station\n",
-      "Arrival station\n",
-      "Cancellation comments\n",
-      "Departure delay comments\n",
-      "Arrival delay comments\n"
+      "/tmp/ipykernel_6358/1465191574.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df[column] = df[column].fillna(method='ffill')\n"
      ]
     }
    ],
