fix: changed data cleaning, cleans all data by date arrival and departure station

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "id": "bdc41ca8",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "id": "e75dcb84",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "id": "5a0d2f87",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "id": "114ef454",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "id": "4fb08f13",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "id": "451b3e69",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "id": "53975e0e",
    "metadata": {},
    "outputs": [],
@@ -365,47 +365,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "625d633b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_data(df: pd.DataFrame):\n",
-    "    # Normalisation globale des valeurs manquantes\n",
-    "    df = df.replace([\"N/A\", \"NA\", \"\", \" \"], pd.NA)\n",
-    "\n",
-    "    for column in df.columns:\n",
-    "        # Pour les colonnes texte avec noms ou commentaires\n",
-    "        if column in [\"Departure station\", \"Arrival station\"] or \"comments\" in column:\n",
-    "            df[column] = (\n",
-    "                df[column]\n",
+    "    # Nettoyage global de valeurs manquantes\n",
+    "    df_cleaned = df.replace([\"N/A\", \"NA\", \"\", \" \", \"nan\", \"None\", \"null\", \"Null\"], pd.NA)\n",
+    "    \n",
+    "    for column in df_cleaned.columns:\n",
+    "        if column in [\"Departure station\", \"Arrival station\"] or \"comments\" in column.lower():\n",
+    "            df_cleaned[column] = (\n",
+    "                df_cleaned[column]\n",
     "                .fillna(\"\")\n",
-    "                .apply(lambda x: get_closest_match(str(x), clean_names))\n",
+    "                .astype(str)\n",
+    "                .str.strip()\n",
+    "                .apply(lambda x: get_closest_match(x, clean_names))\n",
     "            )\n",
     "\n",
-    "        # Correction de la colonne Date\n",
-    "        elif column == \"Date\":\n",
-    "            df[column] = df[column].apply(lambda x: x if is_valid_date(x) else pd.NA)\n",
-    "            # Forward-fill les dates manquantes\n",
-    "            df[column] = df[column].fillna(method='ffill')\n",
+    "        elif \"date\" in column.lower():\n",
+    "            df_cleaned[column] = df_cleaned[column].apply(lambda x: x if is_valid_date(x) else pd.NA)\n",
+    "            df_cleaned[column] = df_cleaned[column].fillna(method='ffill')\n",
     "\n",
-    "\n",
-    "        # Correction de la colonne Service\n",
-    "        elif column == \"Service\":\n",
-    "            df[column] = df[column].fillna(\"International\")\n",
+    "        elif column.lower() == \"service\":\n",
+    "            df_cleaned[column] = df_cleaned[column].fillna(\"International\")\n",
     "\n",
     "        else:\n",
-    "        # Pour le reste (colonnes numériques)\n",
-    "            df[column] = df[column].fillna(0)\n",
+    "            try:\n",
+    "                df_cleaned[column] = pd.to_numeric(df_cleaned[column], errors='coerce').fillna(0)\n",
+    "            except:\n",
+    "                df_cleaned[column] = df_cleaned[column].fillna(\"\")\n",
     "\n",
-    "    # Supprime les paires de stations en double\n",
-    "    df = df.drop_duplicates(subset=[\"Departure station\", \"Arrival station\"], keep=\"first\")\n",
-    "    return df"
+    "    # Vire les doublons de stations (garde la première occurrence)\n",
+    "    df_cleaned = df_cleaned.drop_duplicates(subset=[\"Departure station\", \"Arrival station\", \"Date\"], keep=\"first\")\n",
+    "    print(df_cleaned.isna().sum())\n",
+    "    return df_cleaned\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "id": "2d5c01ec",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
@@ -428,18 +428,18 @@
     "    df = read_csv(\"dataset.csv\")\n",
     "\n",
     "    # Nettoyage du tableau\n",
-    "    clean_data(df)\n",
+    "    cleaned = clean_data(df)\n",
     "\n",
     "    # Convertir en csv\n",
-    "    to_csv(df, path=\"cleaned_dataset.csv\")\n",
+    "    to_csv(cleaned, path=\"cleaned_dataset.csv\")\n",
     "\n",
     "    # Récupération des données\n",
-    "    data_values_dic, data_values_tab = get_data_program(df)"
+    "    data_values_dic, data_values_tab = get_data_program(cleaned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 84,
    "id": "23d480b2",
    "metadata": {},
    "outputs": [
@@ -447,8 +447,50 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6358/1465191574.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df[column] = df[column].fillna(method='ffill')\n"
+      "/tmp/ipykernel_5778/1582680076.py:17: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df_cleaned[column] = df_cleaned[column].fillna(method='ffill')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-01\n",
+      "Date                                                                             0\n",
+      "Service                                                                          0\n",
+      "Departure station                                                                0\n",
+      "Arrival station                                                                  0\n",
+      "Average journey time                                                             0\n",
+      "Number of scheduled trains                                                       0\n",
+      "Number of cancelled trains                                                       0\n",
+      "Cancellation comments                                                            0\n",
+      "Number of trains delayed at departure                                            0\n",
+      "Average delay of late trains at departure                                        0\n",
+      "Average delay of all trains at departure                                         0\n",
+      "Departure delay comments                                                         0\n",
+      "Number of trains delayed at arrival                                              0\n",
+      "Average delay of late trains at arrival                                          0\n",
+      "Average delay of all trains at arrival                                           0\n",
+      "Arrival delay comments                                                           0\n",
+      "Number of trains delayed > 15min                                                 0\n",
+      "Average delay of trains > 15min (if competing with flights)                      0\n",
+      "Number of trains delayed > 30min                                                 0\n",
+      "Number of trains delayed > 60min                                                 0\n",
+      "Pct delay due to external causes                                                 0\n",
+      "Pct delay due to infrastructure                                                  0\n",
+      "Pct delay due to traffic management                                              0\n",
+      "Pct delay due to rolling stock                                                   0\n",
+      "Pct delay due to station management and equipment reuse                          0\n",
+      "Pct delay due to passenger handling (crowding, disabled persons, connections)    0\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5778/2567437744.py:10: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  temp_dic[df_grouped.columns[i]] = tab[i]\n"
      ]
     }
    ],
