--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "id": "bdc41ca8",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "id": "e75dcb84",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "id": "5a0d2f87",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 89,
    "id": "114ef454",
    "metadata": {},
    "outputs": [],
@@ -271,13 +271,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "id": "4fb08f13",
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_csv(df: pd.DataFrame, path=\"test.csv\"):\n",
     "    df.to_csv(path, sep=\";\", index=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b7034b9",
+   "metadata": {},
+   "source": [
+    "Check if delay consistency is good:\n",
+    "\n",
+    "For exemple, if there is more trains delayed by 30 minutes than 15 minutes, which is not possible, the row delayed by 30mn is set to row delayed by 15mn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "a6af42f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_delay_consistency(row):\n",
+    "        if row[\"Number of trains delayed > 30min\"] > row[\"Number of trains delayed > 15min\"]:\n",
+    "            row[\"Number of trains delayed > 30min\"] = row[\"Number of trains delayed > 15min\"]\n",
+    "        if row[\"Number of trains delayed > 60min\"] > row[\"Number of trains delayed > 30min\"]:\n",
+    "            row[\"Number of trains delayed > 60min\"] = row[\"Number of trains delayed > 30min\"]\n",
+    "        return row\n"
    ]
   },
   {
@@ -290,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 91,
    "id": "451b3e69",
    "metadata": {},
    "outputs": [],
@@ -324,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 92,
    "id": "53975e0e",
    "metadata": {},
    "outputs": [],
@@ -371,41 +396,62 @@
    "outputs": [],
    "source": [
     "def clean_data(df: pd.DataFrame):\n",
-    "    # Nettoyage global de valeurs manquantes\n",
-    "    df_cleaned = df.replace([\"N/A\", \"NA\", \"\", \" \", \"nan\", \"None\", \"null\", \"Null\"], pd.NA)\n",
-    "    \n",
-    "    for column in df_cleaned.columns:\n",
-    "        if column in [\"Departure station\", \"Arrival station\"] or \"comments\" in column.lower():\n",
-    "            df_cleaned[column] = (\n",
-    "                df_cleaned[column]\n",
+    "    import numpy as np\n",
+    "\n",
+    "    # 1. Remplacement global des valeurs cheloues\n",
+    "    df = df.replace(\n",
+    "        [\"N/A\", \"NA\", \"NaN\", \"None\", \"null\", \"\", \" \"],\n",
+    "        pd.NA\n",
+    "    )\n",
+    "\n",
+    "    # 2. Correction par colonne\n",
+    "    for column in df.columns:\n",
+    "        col_lower = column.lower()\n",
+    "\n",
+    "        # Nettoyage des stations + commentaires\n",
+    "        if column in [\"Departure station\", \"Arrival station\"] or \"comment\" in col_lower:\n",
+    "            df[column] = (\n",
+    "                df[column]\n",
     "                .fillna(\"\")\n",
     "                .astype(str)\n",
     "                .str.strip()\n",
     "                .apply(lambda x: get_closest_match(x, clean_names))\n",
     "            )\n",
     "\n",
-    "        elif \"date\" in column.lower():\n",
-    "            df_cleaned[column] = df_cleaned[column].apply(lambda x: x if is_valid_date(x) else pd.NA)\n",
-    "            df_cleaned[column] = df_cleaned[column].fillna(method='ffill')\n",
+    "        # Dates au format YYYY-MM\n",
+    "        elif \"date\" in col_lower:\n",
+    "            df[column] = df[column].apply(lambda x: x if is_valid_date(x) else pd.NA)\n",
+    "            df[column] = df[column].fillna(method='ffill')\n",
     "\n",
+    "        # Service\n",
     "        elif column.lower() == \"service\":\n",
-    "            df_cleaned[column] = df_cleaned[column].fillna(\"International\")\n",
+    "            df[column] = df[column].fillna(\"International\")\n",
     "\n",
+    "        # Colonnes numériques\n",
     "        else:\n",
     "            try:\n",
-    "                df_cleaned[column] = pd.to_numeric(df_cleaned[column], errors='coerce').fillna(0)\n",
-    "            except:\n",
-    "                df_cleaned[column] = df_cleaned[column].fillna(\"\")\n",
+    "                df[column] = pd.to_numeric(df[column], errors='coerce')\n",
     "\n",
-    "    # Vire les doublons de stations (garde la première occurrence)\n",
-    "    df_cleaned = df_cleaned.drop_duplicates(subset=[\"Departure station\", \"Arrival station\", \"Date\"], keep=\"first\")\n",
-    "    print(df_cleaned.isna().sum())\n",
-    "    return df_cleaned\n"
+    "                # Clamp toutes les valeurs < 0 à 0 (comptes & délais)\n",
+    "                df[column] = df[column].apply(lambda x: max(x, 0) if pd.notna(x) else 0)\n",
+    "\n",
+    "            except:\n",
+    "                df[column] = df[column].fillna(\"\")\n",
+    "\n",
+    "    df = df.apply(fix_delay_consistency, axis=1)\n",
+    "\n",
+    "    # 4. Supprimer doublons (même départ/arrivée)\n",
+    "    df = df.drop_duplicates(\n",
+    "        subset=[\"Departure station\", \"Arrival station\"],\n",
+    "        keep=\"first\"\n",
+    "    )\n",
+    "\n",
+    "    return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 94,
    "id": "2d5c01ec",
    "metadata": {},
    "outputs": [],
@@ -418,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 95,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
@@ -439,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 96,
    "id": "23d480b2",
    "metadata": {},
    "outputs": [
@@ -447,7 +493,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5778/1582680076.py:17: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/tmp/ipykernel_5778/3443952508.py:17: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df_cleaned[column] = df_cleaned[column].fillna(method='ffill')\n"
      ]
     },
@@ -455,7 +501,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-01\n",
       "Date                                                                             0\n",
       "Service                                                                          0\n",
       "Departure station                                                                0\n",
