fix: formatted files and dropped duplicates correctly

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,16 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
-    "import numpy as np\n",
     "import csv\n",
-    "import re\n",
     "\n",
     "clean_names = [\n",
     "    \"BORDEAUX ST JEAN\",\n",
@@ -97,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "bdc41ca8",
    "metadata": {},
    "outputs": [],
@@ -141,11 +139,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "e75dcb84",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "def get_data_station(df: pd.DataFrame):\n",
     "    dic_values = {}\n",
     "    temp_dic = {}\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "5a0d2f87",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "114ef454",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,9 @@
     "                    row = [val.replace('\\n', ' | ').strip() for val in row]\n",
     "                    if len(row) == nb_columns:\n",
     "                        lignes_corrigees.append(row)\n",
-    "                except csv.Error:\n",
+    "                except Exception as e:\n",
+    "                    if not e:\n",
+    "                        print(e)\n",
     "                    buffer = \"\"\n",
     "                buffer = \"\"\n",
     "\n",
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "4fb08f13",
    "metadata": {},
    "outputs": [],
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "a6af42f1",
    "metadata": {},
    "outputs": [],
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "451b3e69",
    "metadata": {},
    "outputs": [],
@@ -323,16 +325,16 @@
     "def is_valid_date(date_str):\n",
     "    if not isinstance(date_str, str):\n",
     "        return False\n",
-    "    if len(date_str) != 7:\n",
-    "        return False\n",
-    "    if date_str[4] != '-':\n",
+    "    if len(date_str) != 7 or date_str[4] != '-':\n",
     "        return False\n",
     "    try:\n",
     "        year = int(date_str[0:4])\n",
     "        month = int(date_str[5:7])\n",
-    "        return 1 <= month <= 12\n",
-    "    except ValueError:\n",
-    "        return False\n"
+    "        return 1 <= month <= 12 and year > 0\n",
+    "    except Exception as e:\n",
+    "        if not e:\n",
+    "            print(e)\n",
+    "        return False"
    ]
   },
   {
@@ -349,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "53975e0e",
    "metadata": {},
    "outputs": [],
@@ -396,7 +398,6 @@
    "outputs": [],
    "source": [
     "def clean_data(df: pd.DataFrame):\n",
-    "    import numpy as np\n",
     "\n",
     "    # 1. Remplacement global des valeurs cheloues\n",
     "    df = df.replace(\n",
@@ -432,17 +433,19 @@
     "            try:\n",
     "                df[column] = pd.to_numeric(df[column], errors='coerce')\n",
     "\n",
-    "                # Clamp toutes les valeurs < 0 à 0 (comptes & délais)\n",
+    "                # Ca dégage toutes les valeurs < 0 à 0 (comptes & délais)\n",
     "                df[column] = df[column].apply(lambda x: max(x, 0) if pd.notna(x) else 0)\n",
     "\n",
-    "            except:\n",
+    "            except Exception as e:\n",
+    "                if not e:\n",
+    "                    print(e)\n",
     "                df[column] = df[column].fillna(\"\")\n",
     "\n",
     "    df = df.apply(fix_delay_consistency, axis=1)\n",
     "\n",
     "    # 4. Supprimer doublons (même départ/arrivée)\n",
     "    df = df.drop_duplicates(\n",
-    "        subset=[\"Departure station\", \"Arrival station\"],\n",
+    "        subset=[\"Departure station\", \"Arrival station\", \"Date\"],\n",
     "        keep=\"first\"\n",
     "    )\n",
     "\n",
@@ -451,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "2d5c01ec",
    "metadata": {},
    "outputs": [],
@@ -464,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
@@ -485,60 +488,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "23d480b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_5778/3443952508.py:17: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df_cleaned[column] = df_cleaned[column].fillna(method='ffill')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Date                                                                             0\n",
-      "Service                                                                          0\n",
-      "Departure station                                                                0\n",
-      "Arrival station                                                                  0\n",
-      "Average journey time                                                             0\n",
-      "Number of scheduled trains                                                       0\n",
-      "Number of cancelled trains                                                       0\n",
-      "Cancellation comments                                                            0\n",
-      "Number of trains delayed at departure                                            0\n",
-      "Average delay of late trains at departure                                        0\n",
-      "Average delay of all trains at departure                                         0\n",
-      "Departure delay comments                                                         0\n",
-      "Number of trains delayed at arrival                                              0\n",
-      "Average delay of late trains at arrival                                          0\n",
-      "Average delay of all trains at arrival                                           0\n",
-      "Arrival delay comments                                                           0\n",
-      "Number of trains delayed > 15min                                                 0\n",
-      "Average delay of trains > 15min (if competing with flights)                      0\n",
-      "Number of trains delayed > 30min                                                 0\n",
-      "Number of trains delayed > 60min                                                 0\n",
-      "Pct delay due to external causes                                                 0\n",
-      "Pct delay due to infrastructure                                                  0\n",
-      "Pct delay due to traffic management                                              0\n",
-      "Pct delay due to rolling stock                                                   0\n",
-      "Pct delay due to station management and equipment reuse                          0\n",
-      "Pct delay due to passenger handling (crowding, disabled persons, connections)    0\n",
-      "dtype: int64\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_5778/2567437744.py:10: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  temp_dic[df_grouped.columns[i]] = tab[i]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
